FIX: search results: reverts conditional top padding
- reverts the removal of extra spacing for the empty results container
- the previous change is no longer viable since initial options are now displayed on mobile as well

--- a/app/assets/stylesheets/common/base/search-menu.scss
+++ b/app/assets/stylesheets/common/base/search-menu.scss
@@ -94,10 +94,7 @@ $search-pad-horizontal: 0.5em;
   .results {
     display: flex;
     flex-direction: column;
-
-    &.with-data {
-      padding-top: $search-pad-vertical;
-    }
+    padding-top: $search-pad-vertical;
 
     .list {
       min-width: 100px;
